--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,13 @@ tika = "^2.6.0"
 uvicorn = "^0.23.2"
 
 
+[tool.poetry.group.dev.dependencies]
+black = "^23.7.0"
+pre-commit = "^3.3.3"
+pylint = "^2.17.5"
+ruff = "^0.0.281"
+isort = "^5.12.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
