--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ pylint = "^2.17.5"
 ruff = "^0.0.281"
 isort = "^5.12.0"
 
+[tool.ruff]
+line-length = 100
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
