--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-dotenv = "^1.0.0"
 boto3 = "^1.28.16"
 tika = "^2.6.0"
 uvicorn = "^0.23.2"
+mergepythonclient = "^0.2.1"
 
 
 [tool.poetry.group.dev.dependencies]
