--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,10 @@ select = [
 ]
 line-length = 100
 
+[tool.ruff.pyupgrade]
+# Preserve types, even if a file imports `from __future__ import annotations`.
+keep-runtime-typing = true
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
