--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = []
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = "^0.100.1"
-llama-index = "^0.7.16"
+llama-index = "^0.7.19"
 python-dotenv = "^1.0.0"
 boto3 = "^1.28.16"
 uvicorn = "^0.23.2"
@@ -18,6 +18,7 @@ unstructured = {extras = ["csv", "doc", "docx", "html", "pdf", "ppt", "pptx", "r
 ray = {extras = ["default"], version = "^2.6.2"}
 langchain = {extras = ["llms"], version = "^0.0.251"}
 websockets = "^11.0.3"
+cohere = "^4.19.2"
 
 
 [tool.poetry.group.dev.dependencies]
