--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,16 +8,16 @@ packages = []
 
 [tool.poetry.dependencies]
 boto3 = "^1.28.16"
-cohere = "^4.19.2"
+cohere = "^4.19.3"
 fastapi = "^0.100.1"
 langchain = {extras = ["llms"], version = "^0.0.251"}
-llama-index = "^0.7.19"
-mergepythonclient = "^0.2.1"
-pymilvus = "^2.2.14"
+llama-index = "^0.7.24.post1"
+mergepythonclient = "^0.2.2"
+pymilvus = "2.2.13"
 python = "^3.10"
 python-dotenv = "^1.0.0"
 ray = {extras = ["default"], version = "^2.6.2"}
-unstructured = {extras = ["csv", "doc", "docx", "html", "pdf", "ppt", "pptx", "rtf", "txt", "xlsx"], version = "^0.9.0"}
+unstructured = {extras = ["csv", "doc", "docx", "html", "pdf", "ppt", "pptx", "rtf", "txt", "xlsx"], version = "^0.9.2"}
 uvicorn = "^0.23.2"
 websockets = "^11.0.3"
 gpustat = "1.0.0"
