--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ unstructured = {extras = ["csv", "doc", "docx", "html", "pdf", "ppt", "pptx", "r
 uvicorn = "^0.23.2"
 websockets = "^11.0.3"
 gpustat = "1.0.0"
+loguru = "^0.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
