--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,13 @@ readme = "README.md"
 packages = []
 
 [tool.poetry.dependencies]
-boto3 = "^1.28.16"
+boto3 = "^1.28.25"
 cohere = "^4.19.3"
-fastapi = "^0.100.1"
-langchain = {extras = ["llms"], version = "^0.0.251"}
-llama-index = "^0.7.24.post1"
+fastapi = "^0.101.1"
+langchain = "^0.0.262"
+llama-index = "^0.8.1"
 mergepythonclient = "^0.2.2"
-pymilvus = "2.2.13"
+pymilvus = "^2.2.15"
 python = "^3.10"
 python-dotenv = "^1.0.0"
 ray = {extras = ["default"], version = "^2.6.2"}
