--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ uvicorn = "^0.23.2"
 websockets = "^11.0.3"
 gpustat = "1.0.0"
 loguru = "^0.7.0"
+pyarrow = "^12.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
