--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ packages = []
 
 [tool.poetry.dependencies]
 boto3 = "^1.28.31"
-cohere = "^4.19.3"
 fastapi = "^0.101.1"
 langchain = "^0.0.262"
 llama-index = "^0.8.5.post2"
@@ -23,6 +22,8 @@ websockets = "^11.0.3"
 gpustat = "1.0.0"
 loguru = "^0.7.0"
 pyarrow = "^12.0.1"
+sentence-transformers = "^2.2.2"
+cohere = "^4.21"
 
 
 [tool.poetry.group.dev.dependencies]
